# milter-greylist-geoip2

./: ChangeLog  Makefile  Makefile.in  README  acl.c  acl.h  brokenmfapi.c  brokenmfapi.h  brokenmfapi.sh  brokenmfapi_gen.c  clock.c  conf.c  conf.h  conf_lex.l  conf_yacc.y  config.h  config.h.in  configure  configure.ac  dkimcheck.c  dkimcheck.h  dnsrbl.c  dnsrbl.h  dump.c  dump.h  dump_lex.l  dump_yacc.y  fd_pool.c  geoip.c  geoip.h  geoip2.c  geoip2.h  geoip2db.patch  greylist.conf  greylist.conf.5  greylist2.conf  ldapcheck.c  ldapcheck.h  list.c  macro.c  (+32 more)
CVS/: Entries  Repository  Tag
